AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/zstd/include" "src" "\\.h$")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN)
ADD_EXE(ArTool "${src}")
if(WIN32)
  target_link_libraries(ArTool zstd_static)
  if(MSVC)
    set(ArTool_LINK_FLAGS_DEBUG "${ArTool_LINK_FLAGS_DEBUG} /NODEFAULTLIB:LIBCMT")
    set_target_properties(ArTool PROPERTIES
      LINK_FLAGS_DEBUG "${ArTool_LINK_FLAGS_DEBUG}")
  endif()
else()
  target_link_libraries(ArTool zstd)
  if(CYGWIN)
    target_link_libraries(ArTool iconv)
  endif()
endif()
install(TARGETS ArTool DESTINATION bin)
